# Giac-Xcas-wxCAS

./: INSTALL  Makefile.am  Makefile.in  README  TODO  aclocal.m4  compile.mingw  config.h.in  config.h.win  configure  configure.in  giac.specs  giac.specs32  mkdebian  mkiphone  mkosx  pariinl.h  win2unix.cc  xcas.applications  xcas.desktop  xcas.nsi  xcas.xpm
check/: Makefile.am  Makefile.in  TP00-sol.cas  TP00-sol.cas.out1  TP01-sol.cas.out1  TP02-sol.cas  TP02-sol.cas.out1  TP03-sol.cas  TP03-sol.cas.out1  TP04-sol.cas  TP04-sol.cas.out1  TP05-sol.cas  TP05-sol.cas.out1  TP06-sol.cas  TP06-sol.cas.out1  TP07-sol.cas.out1  TP08-sol.cas  TP08-sol.cas.out1  TP09-sol.cas.out1  TP11-sol.cas  TP11-sol.cas.out1  TP12-sol.cas  TP12-sol.cas.out1  TP13-sol.cas  TP13-sol.cas.out1  TP14-sol.cas.out1  TP15-sol.cas  TP15-sol.cas.out1  TP16-sol.cas  TP16-sol.cas.out1  TP17-sol.cas  TP17-sol.cas.out1  TP18-sol.cas.out1  TP19-sol.cas.out1  TP20-sol.cas.out1  TP21-sol.cas.out1  cas.out  chk_cas  chk_fhan14  chk_fhan2  (+10 more)
debian/: Makefile.am  Makefile.in  changelog  control  giac.1  giac.sharedmimeinfo  rules
debianold/: Makefile.am  Makefile.in  README.debian  changelog  control  giac.1  rules
examples/: Makefile.am  Makefile.in
po/: POTFILES.in  el.gmo  el.po  en.gmo  en.po  es.gmo  es.po  fr.gmo  fr.po  giac.pot  it.gmo  it.po  pt.gmo  pt.po  zh.gmo  zh.po
src/: Cfg.cc  Editeur.cc  Editeur.h  Equation.cc  Equation.h  Fl_GDI_Printer.cxx  Fl_Gl_Choice.H  Flv_Data_Source.H  Flv_List.H  Flv_List.cc  Flv_Table.H  Flv_Table.cc  Flve_Check_Button.H  Flve_Combo.H  Flve_Combo.cc  (+124 more)
(+71 files in other folders)
